use platform-bom

--- a/buildSrc/src/main/groovy/io.micronaut.internal.starter.convention.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.internal.starter.convention.gradle
@@ -3,10 +3,10 @@ plugins {
 }
 
 dependencies {
-    annotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
-    implementation platform("io.micronaut:micronaut-bom:$micronautVersion")
+    annotationProcessor platform("io.micronaut.platform:micronaut-platform:$micronautVersion")
+    implementation platform("io.micronaut.platform:micronaut-platform:$micronautVersion")
     annotationProcessor "io.micronaut:micronaut-inject-java"
-    testAnnotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
+    testAnnotationProcessor platform("io.micronaut.platform:micronaut-platform:$micronautVersion")
     testAnnotationProcessor "io.micronaut:micronaut-inject-java"
 }
 
