--- a/starter-api/build.gradle
+++ b/starter-api/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     annotationProcessor "com.google.code.findbugs:jsr305"
 
     annotationProcessor "io.micronaut.docs:micronaut-docs-asciidoc-config-props:$micronautDocsVersion"
-    api platform("io.micronaut:micronaut-bom:$micronautVersion")
+    api platform("io.micronaut.platform:micronaut-platform:$micronautVersion")
 
     api project(":starter-core"), {
         exclude group:'org.slf4j', module:'slf4j-nop'
