use functions-framework-api version in bom

--- a/starter-gcp-function/build.gradle
+++ b/starter-gcp-function/build.gradle
@@ -15,13 +15,14 @@ dependencies {
     implementation "io.micronaut:micronaut-inject"
 
     implementation "io.micronaut.gcp:micronaut-gcp-function-http"
-    compileOnly 'com.google.cloud.functions:functions-framework-api:1.0.4'
-    developmentOnly 'com.google.cloud.functions:functions-framework-api:1.0.1'
+    compileOnly("com.google.cloud.functions:functions-framework-api")
+    developmentOnly(platform("io.micronaut.platform:micronaut-platform:$micronautVersion"))
+    developmentOnly("com.google.cloud.functions:functions-framework-api")
 
     runtimeOnly "ch.qos.logback:logback-classic:1.2.11"
 
     testCompileOnly "io.micronaut:micronaut-inject-groovy"
-    testImplementation 'com.google.cloud.functions:functions-framework-api:1.0.1'
+    testImplementation("com.google.cloud.functions:functions-framework-api")
     testImplementation "io.micronaut.test:micronaut-test-spock"
     invoker 'com.google.cloud.functions.invoker:java-function-invoker:1.0.2'
 }
