--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 projectVersion=4.0.0-SNAPSHOT
 micronautBuildVersion=1.1.5
-micronautVersion=4.0.0-M1
+micronautVersion=4.0.0-SNAPSHOT
 rockerVersion=1.3.0
 groovyVersion=4.0.11
 spockVersion=2.3-groovy-4.0
