Add KSP feature (#1704)

--- a/gradle/templates.versions.toml
+++ b/gradle/templates.versions.toml
@@ -41,6 +41,7 @@ jte-gradle-plugin= "2.2.6"
 jte-maven-plugin= "2.2.6"
 kotest = "4.2.5"
 kotlin = "1.8.20"
+ksp = "1.8.20-1.0.10"
 log4j = "2.19.0"
 log4j-slf4j = "2.17.2"
 micronaut-aot = "2.0.0-M1"
@@ -96,6 +97,7 @@ kotest-assertions-core-jvm = { module = "io.kotest:kotest-assertions-core-jvm", 
 kotest-runner-junit5-jvm = { module = "io.kotest:kotest-runner-junit5-jvm", version.ref = "kotest" }
 kotlin-allopen = { module = "org.jetbrains.kotlin:kotlin-allopen", version.ref = "kotlin" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+ksp-gradle-plugin = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 kotlin-noarg = { module = "org.jetbrains.kotlin:kotlin-noarg", version.ref = "kotlin" }
 log4j-api = { module = "org.apache.logging.log4j:log4j-api", version.ref = "log4j" }
 log4j-core = { module = "org.apache.logging.log4j:log4j-core", version.ref = "log4j" }
