--- a/.github/workflows/mn-windows-snapshot.yml
+++ b/.github/workflows/mn-windows-snapshot.yml
@@ -35,10 +35,10 @@ jobs:
         run: ./starter-cli/build/native/nativeCompile/mn.exe create-app test
       - name: "✅ Verify Build (CMD)"
         shell: cmd
-        run: ./starter-cli/build/native/nativeCompile/mn --version
+        run: "starter-cli\build\native\nativeCompile\mn --version"
       - name: "✅ Verify Create App (CMD)"
         shell: cmd
-        run: ./starter-cli/build/native/nativeCompile/mn create-app test2
+        run: "starter-cli\build\native\nativeCompile\mn create-app test2"
       - name: "🤐 ZIP Archive"
         run: |
           New-Item "./mn-win-amd64-snapshot/bin" -ItemType Directory -ea 0
