Pin version and try windows paths again

--- a/.github/workflows/mn-linux-snapshot.yml
+++ b/.github/workflows/mn-linux-snapshot.yml
@@ -18,7 +18,7 @@ jobs:
       - name: "☕️ Setup GraalVM CE"
         uses: graalvm/setup-graalvm@v1
         with:
-          version: 'latest'
+          version: '22.3.2'
           java-version: '17'
           native-image-musl: 'true'
           components: 'native-image'
