--- a/.github/workflows/gcf-snapshot.yml
+++ b/.github/workflows/gcf-snapshot.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
+      - name: Set up JDK
+        uses: actions/setup-java@v3.9.0
+        with:
+          distribution: 'adopt'
+          java-version: '17'
       - name: Build the JAR
         run: ./gradlew starter-api:test starter-gcp-function:test starter-gcp-function:shadowJar
         env:
