--- a/starter-core/build.gradle
+++ b/starter-core/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
 def micronautVersionInfo = tasks.register("micronautVersionInfo", io.micronaut.internal.starter.tasks.WriteMicronautVersionInfoTask) {
     version = micronautVersion
+    // TODO: remove this once we have a release
+    platformVersion = micronautPlatformVersion
     extraBomProperties = [
             'io.micronaut:micronaut-core',
             'io.micronaut.logging:micronaut-logging',
