--- a/starter-web-servlet/build.gradle
+++ b/starter-web-servlet/build.gradle
@@ -15,12 +15,12 @@ dependencies {
     implementation project(":starter-api")
     implementation "io.micronaut:micronaut-inject"
 
-    implementation("io.micronaut.servlet:micronaut-servlet-engine")
+    implementation("io.micronaut.servlet:micronaut-servlet-engine:4.0.0-M3")
     implementation("io.micronaut:micronaut-jackson-databind")
-    developmentOnly "io.micronaut.servlet:micronaut-http-server-jetty"
+    developmentOnly "io.micronaut.servlet:micronaut-http-server-jetty:4.0.0-M3"
 
     runtimeOnly "ch.qos.logback:logback-classic:1.2.11"
-    testImplementation "io.micronaut.servlet:micronaut-http-server-jetty"
+    testImplementation "io.micronaut.servlet:micronaut-http-server-jetty:4.0.0-M3"
     testCompileOnly "io.micronaut:micronaut-inject-groovy"
     testImplementation "io.micronaut.test:micronaut-test-spock"
     testImplementation "io.micronaut:micronaut-http-client"
