Force Core version to 4.0.0-M2
It should not be necessary but we need to do it to avoid SNAPSHOT version of core to be used

--- a/buildSrc/src/main/groovy/io.micronaut.internal.starter.base-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.internal.starter.base-module.gradle
@@ -15,6 +15,7 @@ ext {
 
 configurations.all {
     resolutionStrategy {
+        force "io.micronaut:micronaut-core-bom:${rootProject.micronautCoreVersion}"
         eachDependency { DependencyResolveDetails details ->
             if (details.requested.group == "org.apache.groovy") {
                 details.useVersion(groovyVersion)
