--- a/starter-aws-lambda/build.gradle
+++ b/starter-aws-lambda/build.gradle
@@ -31,4 +31,9 @@ graalvmNative {
 
 tasks.named("dockerfileNative") {
     baseImage = "amazonlinux:2"
+    args(
+            "-XX:MaximumHeapSizePercent=80",
+            "-Dio.netty.allocator.numDirectArenas=0",
+            "-Dio.netty.noPreferDirect=true"
+    )
 }
