--- a/starter-analytics-postgres/build.gradle
+++ b/starter-analytics-postgres/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     testImplementation "io.micronaut:micronaut-http-client"
     testImplementation "io.micronaut.test:micronaut-test-spock"
     testImplementation "org.testcontainers:postgresql"
-    testImplementation "ch.qos.logback:logback-classic:1.2.3"
+    testImplementation "ch.qos.logback:logback-classic"
 }
 
 mainClassName = 'io.micronaut.starter.analytics.postgres.Main'
