--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 plugins {
     id "io.micronaut.internal.starter.aggregator"
     id "io.micronaut.build.internal.dependency-updates"
+    // https://github.com/bmuschko/gradle-docker-plugin/issues/1123
+    // https://github.com/gradle/gradle/issues/17559
+    id("com.bmuschko.docker-remote-api") version "9.0.1" apply false
 }
