Fix generation Native executable with GraalVM for AWS Lambda deployment (#1773)
* remove unnecessary logback version

* set runtime as lambda_provided

* pin base image to amazonlinux:2

* add args

* change runtime to lambda_provided

--- a/starter-aws-lambda/build.gradle
+++ b/starter-aws-lambda/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 micronaut {
     version micronautVersion
-    runtime "lambda"
+    runtime("lambda_provided")
 }
 
 dependencies {
     implementation project(":starter-api")
-    runtimeOnly "ch.qos.logback:logback-classic:1.2.11"
+    runtimeOnly "ch.qos.logback:logback-classic"
     testCompileOnly "io.micronaut:micronaut-inject-groovy"
 }
 
@@ -24,4 +24,13 @@ graalvmNative {
             imageName = 'application'
         }
     }
+}
+
+tasks.named("dockerfileNative") {
+    baseImage = "amazonlinux:2"
+    args(
+            "-XX:MaximumHeapSizePercent=80",
+            "-Dio.netty.allocator.numDirectArenas=0",
+            "-Dio.netty.noPreferDirect=true"
+    )
 }
