--- a/.github/workflows/analytics-gcr-snapshot.yml
+++ b/.github/workflows/analytics-gcr-snapshot.yml
@@ -33,6 +33,7 @@ jobs:
         run:
           ./gradlew dockerPush
         env:
+          DOCKER_TAG: 'snapshot'
           GCLOUD_PROJECT: ${{ secrets.GCLOUD_PROJECT }}
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
           GRADLE_ENTERPRISE_CACHE_USERNAME: ${{ secrets.GRADLE_ENTERPRISE_CACHE_USERNAME }}
