--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -1,4 +1,8 @@
 introduction: Introduction
+cdk:
+  title: AWS CDK
+  micronautFunctionFile: MicronautFunctionFile
+  micronautFunction: MicronautFunction
 installation: 
   title: Installation
   installSdkman: Install with SDKman
