remove logback version use version from BOM

--- a/starter-api/build.gradle
+++ b/starter-api/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     testImplementation "io.micronaut:micronaut-http-server-netty"
     testImplementation "io.micronaut:micronaut-http-client"
     testImplementation "io.micronaut.test:micronaut-test-spock"
-    testImplementation "ch.qos.logback:logback-classic:1.2.11"
+    testImplementation("ch.qos.logback:logback-classic")
 }
