--- a/gradle/templates.versions.toml
+++ b/gradle/templates.versions.toml
@@ -47,7 +47,7 @@ log4j = "2.19.0"
 log4j-slf4j = "2.17.2"
 micronaut-aot = "2.0.0-M1"
 micronaut-build-plugins = "6.4.4"
-micronaut-gradle-plugin = "4.0.0-SNAPSHOT"
+micronaut-gradle-plugin = "4.0.0-M4"
 mockk = "1.9.3"
 protobuf-gradle-plugin = "0.9.2"
 rewrite-gradle-plugin = "5.12.0"
