revert to setup-gcloud 0.2.1

--- a/.github/workflows/analytics-gcr-snapshot.yml
+++ b/.github/workflows/analytics-gcr-snapshot.yml
@@ -16,7 +16,7 @@ jobs:
           distribution: 'adopt'
           java-version: '17'
       - name: Authenticate into Google Cloud Platform
-        uses: google-github-actions/setup-gcloud@v1.1.0
+        uses: google-github-actions/setup-gcloud@v0.2.1
         with:
           service_account_email: ${{ secrets.GCLOUD_EMAIL }}
           service_account_key: ${{ secrets.GCLOUD_AUTH }}
@@ -40,4 +40,5 @@ jobs:
           GRADLE_ENTERPRISE_CACHE_PASSWORD: ${{ secrets.GRADLE_ENTERPRISE_CACHE_PASSWORD }}
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy micronaut-starter-analytics-staging --quiet --image gcr.io/${{ secrets.GCLOUD_PROJECT }}/micronaut-starter-analytics:snapshot --project ${{ secrets.GCLOUD_PROJECT }} --region  us-central1 --platform managed --service-account=${{ secrets.GCLOUD_EMAIL }}
+          gcloud components install beta --quiet
+          gcloud beta run deploy micronaut-starter-analytics-staging --quiet --image gcr.io/${{ secrets.GCLOUD_PROJECT }}/micronaut-starter-analytics:snapshot --project ${{ secrets.GCLOUD_PROJECT }} --region  us-central1 --platform managed --service-account=${{ secrets.GCLOUD_EMAIL }}
