security AOT optimizations for maven
Close #1907

This PR

- Adds security AOT optimizations for Maven builds
- Correctly adds the security AOT plugin as a dependency with aotPlugins Gradle Configuration in Gradle and as a aotDepndency of the micronaut plugin configuration.
- It disables service loading and yaml AOT optimizations which fail due to a bug in GraalVM
- Moves Optimizations to Java code outside of rocker

--- a/gradle/templates.versions.toml
+++ b/gradle/templates.versions.toml
@@ -61,8 +61,10 @@ zeebe-micronaut-client = "1.14.0"
 ktor = "2.2.4"
 jakarta-validation-api = "3.0.2"
 micronaut-starter-aws-cdk = "4.0.0-M4"
+micronaut-security-aot = "4.0.0-M8"
 
 [libraries]
+micronaut-security-aot = { module = "io.micronaut.security:micronaut-security-aot", version.ref = "micronaut-security-aot" }
 micronaut-starter-aws-cdk = { module = "io.micronaut.starter:micronaut-starter-aws-cdk", version.ref = "micronaut-starter-aws-cdk" }
 jakarta-validation-api = { module = "jakarta.validation:jakarta.validation-api", version.ref = "jakarta-validation-api" }
 agorapulse-gru = { module = "com.agorapulse:gru-micronaut", version.ref = "agorapulse-gru" }
