--- a/starter-core/src/test/resources/expected-aot-native-image.properties
+++ b/starter-core/src/test/resources/expected-aot-native-image.properties
@@ -9,13 +9,13 @@ cached.environment.enabled=true
 precompute.environment.properties.enabled=true
 
 # Converts YAML configuration files to Java configuration
-yaml.to.java.config.enabled=true
+yaml.to.java.config.enabled=false
 
 # Generates GraalVM configuration files required to load the AOT optimizations
 graalvm.config.enabled=true
 
 # Scans for service types ahead-of-time, avoiding classpath scanning at startup
-serviceloading.native.enabled=true
+serviceloading.native.enabled=false
 
 # Scans reactive types at build time instead of runtime
 scan.reactive.types.enabled=true
