--- a/starter-gcp-function/build.gradle
+++ b/starter-gcp-function/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     testImplementation("com.google.cloud.functions:functions-framework-api")
     testImplementation "io.micronaut.test:micronaut-test-spock"
     invoker 'com.google.cloud.functions.invoker:java-function-invoker:1.3.0'
+
+    annotationProcessor("io.micronaut.serde:micronaut-serde-processor")
+    implementation("io.micronaut.serde:micronaut-serde-jackson")
 }
 
 tasks.named("test", Test) {
