update build [ci skip]

--- a/starter-api/build.gradle
+++ b/starter-api/build.gradle
@@ -5,7 +5,7 @@ plugins {
 dependencies {
     annotationProcessor("io.micronaut.openapi:micronaut-openapi")
     annotationProcessor("io.micronaut.docs:micronaut-docs-asciidoc-config-props:$micronautDocsVersion")
-    api project(":starter-features"), {
+    api project(":starter-core"), {
         exclude group:'org.slf4j', module:'slf4j-nop'
     }
     implementation("io.swagger.core.v3:swagger-annotations")
