--- a/starter-core/build.gradle
+++ b/starter-core/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     api "org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r"
     api("org.yaml:snakeyaml")
     implementation("com.typesafe:config:1.4.2")
+    implementation("io.micronaut.testresources:micronaut-test-resources-build-tools")
     implementation 'org.apache.commons:commons-compress:1.21'
+    testImplementation("org.apache.groovy:groovy-xml")
 }
 
 TaskProvider<WriteMicronautVersionInfoTask> micronautVersionInfo = tasks.register("micronautVersionInfo", WriteMicronautVersionInfoTask) {
