--- a/starter-core/build.gradle
+++ b/starter-core/build.gradle
@@ -1,3 +1,5 @@
+import io.micronaut.internal.starter.tasks.WriteMicronautVersionInfoTask
+
 plugins {
     id "io.micronaut.internal.starter.published-module"
     id "io.micronaut.internal.starter.convention"
@@ -17,19 +19,18 @@ dependencies {
     api platform("io.micronaut.platform:micronaut-platform:$micronautVersion")
     api "com.fizzed:rocker-runtime:$rockerVersion"
     api "io.micronaut:micronaut-inject"
-    api "io.micronaut:micronaut-http"
-    api "io.micronaut:micronaut-http-client"
     api("com.fasterxml.jackson.core:jackson-annotations")
+    api "io.micronaut:micronaut-http-client"
     api "io.github.java-diff-utils:java-diff-utils:4.10"
     api "org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r"
-    implementation("org.yaml:snakeyaml")
-    implementation 'com.typesafe:config:1.4.2'
-    implementation 'io.micronaut.testresources:micronaut-test-resources-build-tools:2.0.0-M1'
+    api("org.yaml:snakeyaml")
+    implementation("com.typesafe:config:1.4.2")
+    implementation("io.micronaut.testresources:micronaut-test-resources-build-tools")
     implementation 'org.apache.commons:commons-compress:1.21'
     testImplementation("org.apache.groovy:groovy-xml")
 }
 
-def micronautVersionInfo = tasks.register("micronautVersionInfo", io.micronaut.internal.starter.tasks.WriteMicronautVersionInfoTask) {
+TaskProvider<WriteMicronautVersionInfoTask> micronautVersionInfo = tasks.register("micronautVersionInfo", WriteMicronautVersionInfoTask) {
     version = micronautVersion
     extraBomProperties = [
             'io.micronaut:micronaut-core',
